# parallel

MPI/: script.sh
MPI/lab1/: CMakeLists.txt  main.cpp
MPI/lab2/: CMakeLists.txt  main.cpp
MPI/lab3/: CMakeLists.txt  main.cpp
MPI/lab4/: CMakeLists.txt  main.cpp
ProjectMPI/: CMakeLists.txt  output_status_200_3.txt  output_status_200_6.txt  output_status_200_9.txt  output_status_404_3.txt  output_status_404_6.txt  output_status_404_9.txt  output_status_500_3.txt  output_status_500_6.txt  output_status_500_9.txt  script.sh  seq_output_status_200.txt  seq_output_status_404.txt  seq_output_status_500.txt
ProjectMPI/include/: analyzer.h  generator.h  mpi_io.h
ProjectMPI/src/: analyzer.cpp  generator.cpp  main.cpp  mpi_io.cpp
lab1/: CMakeLists.txt  main.cpp
lab2/: CMakeLists.txt  main.cpp
lab3/: CMakeLists.txt  main.cpp
lab4/: CMakeLists.txt  main.cpp
project/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  main  main.c  test.cpp
